--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "bin": {
-    "dealy-commit": "src/index.js"
+    "delay-commit": "src/index.js"
   },
   "author": "",
   "license": "ISC",
